# Full-SDLC-AgenticAI

./: .checkpoints.sqlite  .gitignore  README.md  extract_pdf.py  pyproject.toml  setup.sh  start_ui.sh  verify_mods.py
data/: checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal
prompts/medical/: dev_system.md  dev_user.md  manual_qa_system.md  pm_system.md  reviewer_system.md  tl_system.md  tm_system.md
prompts/software/: automation_qa_system.md  automation_qa_user.md  dev_system.md  manual_qa_user.md  pm_system.md  pm_user.md  reviewer_system.md  reviewer_user.md  tl_system.md  tl_user.md  tm_system.md  tm_user.md
schemas/: bug_template.md  mrs_template.md  srs_template.md  step_template.md  test_strategy_template.md
scripts/: auto_git_agent.py
simple_to_do/: README.md  app.py  requirements.txt  utils.py
src/: __init__.py  main.py
src/agents/: __init__.py  automation_qa.py  base_agent.py  developer.py  manual_qa.py  product_manager.py  reviewer.py  test_lead.py  test_manager.py
src/api/: server.py
src/core/: artifacts.py  config.py  events.py  llm.py  log_manager.py  prompts.py  run_manager.py  schemas.py
src/workflow/: graph.py  nodes.py  state.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: ArtifactViewer.tsx  GraphView.tsx  StreamingThought.tsx
